--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec 'npm run build && npm run start'",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "start": "node dist/index.js"
   },
   "author": "",
@@ -29,6 +29,7 @@
     "@types/memory-cache": "^0.2.6",
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.4.5"
   }
 }
