--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "main": "dist/api/index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec 'npm run build && npm run start'",
+    "dev": "nodemon --watch 'api/**' --ext 'ts,json' --exec 'npm run build && npm run start'",
     "build": "rimraf dist && tsc",
-    "start": "node dist/api/index.js"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "Apache-2.0",
